--- a/hotspot/login.html
+++ b/hotspot/login.html
@@ -7,8 +7,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <title>Selamat Datang Di Jaringan Hotspot EZA RELOAD Net</title> 
 	<script type="text/javascript" src="js/custom.js"></script>
- <link rel="stylesheet" href="css/tambahan.css">
-    <link rel="stylesheet" href="style.css">
+ <link rel="stylesheet" href="/mikrotik/main/hotspot/css/tambahan.css">
+    <link rel="stylesheet" href="/mikrotik/main/hotspot/style.css">
   </head>
   <body onClick="Play()"> 
  <!-- script login form -->
@@ -19,7 +19,7 @@
 		<input type="hidden" name="dst" value="$(link-orig)" />
 		<input type="hidden" name="popup" value="true" />
 	</form>
-	<script type="text/javascript" src="/md5.js"></script>
+	<script type="text/javascript" src="/mikrotik/main/hotspot/md5.js"></script>
 	<script type="text/javascript">
 	<!--
 	    function doLogin() {
@@ -36,7 +36,7 @@ $(endif)
       <div class="container h-100 d-flex align-items-center justify-content-between">
 
         <!-- Nama di bagian atas / header -->
-         <div class="logo-wrapper"><img src="http://1.bp.blogspot.com/-fhYRdU54HkU/YPdkB2MtLmI/AAAAAAAASgA/zA-Kr1sVXjMuQx7QHTeW3OAsm-TsnJs3gCNcBGAsYHQ/s320/logo5.png" class="logo mb-1"></div> 
+         <div class="logo-wrapper"><img src="/mikrotik/main/hotspot/img/logo5.png" class="logo mb-1"></div> 
  <!-- Akhir nama di bagian atas / header -->
 
            <div class="single-settings d-flex align-items-center justify-content-between">
@@ -55,15 +55,15 @@ $(endif)
           </div> 
     <div class="page-content-wrapper">
       <div class="hero-slides owl-carousel">
-        <div class="single-hero-slide" style="background-image: url('http://file.ezareload.com/slid4.png')">
+        <div class="single-hero-slide" style="background-image: url('/mikrotik/main/hotspot/img/slid4.png')">
         </div>
-        <div class="single-hero-slide" style="background-image: url('http://file.ezareload.com/slid5.png')">
+        <div class="single-hero-slide" style="background-image: url('/mikrotik/main/hotspot/img/slid5.png')">
         </div>
-        <div class="single-hero-slide" style="background-image: url('http://file.ezareload.com/slid6.png')">
+        <div class="single-hero-slide" style="background-image: url('/mikrotik/main/hotspot/img/slid6.png')">
         </div>
-        <div class="single-hero-slide" style="background-image: url('http://file.ezareload.com/slid7.png')">
+        <div class="single-hero-slide" style="background-image: url('/mikrotik/main/hotspot/img/slid7.png')">
         </div>
-        <div class="single-hero-slide" style="background-image: url('http://file.ezareload.com/slid8.png')">
+        <div class="single-hero-slide" style="background-image: url('/mikrotik/main/hotspot/img/slid8.png')">
         </div>
       </div>
 	  <!-- form untuk login-->
@@ -120,17 +120,17 @@ $(endif)
               <div class="col-4">
                 <div class="card catagory-card">
               <div class="card-body">
-  <a href="trial.html"><img src="http://1.bp.blogspot.com/-y1NlWgpaW4A/YPWhi8SGQvI/AAAAAAAASdU/JDh8DjqjOEAPKDQ43wN3wODGAr0d-1hHgCNcBGAsYHQ/s0/free.png" class="icon"><i class=""></i><span>Gratis<br>10 Menit</span></a></div>
+  <a href="trial.html"><img src="/mikrotik/main/hotspot/img/free.png" class="icon"><i class=""></i><span>Gratis<br>10 Menit</span></a></div>
                 </div>
               </div>
               <div class="col-4">  
                 <div class="card catagory-card">
-                  <div class="card-body"><a href="member.html"><img src="http://1.bp.blogspot.com/-_oOuXgU5k_4/YPWhj2HwMgI/AAAAAAAASdw/YYq9AV8_KgEqc_-6ekd7phwGNmDzKxNnACNcBGAsYHQ/s0/member.png" class="icon"><i class=""></i><span>Login<br>Member</span></a></div>
+                  <div class="card-body"><a href="member.html"><img src="/mikrotik/main/hotspot/img/member.png" class="icon"><i class=""></i><span>Login<br>Member</span></a></div>
                 </div>
               </div>
               <div class="col-4">
                 <div class="card catagory-card">
-                  <div class="card-body"><a onclick="window.location='http://laksa19.github.io/myqr';"><img src="http://1.bp.blogspot.com/-BL8kuRuSXSM/YPWhiAe93kI/AAAAAAAASdI/EoGyoPXcPe0E814WM6PmPFcPRYjfhlvPQCNcBGAsYHQ/s0/barcode.png" class="icon"><i class=""></i><span>Login<br>Barcode</span></a></div>
+                  <div class="card-body"><a onclick="window.location='http://laksa19.github.io/myqr';"><img src="/mikrotik/main/hotspot/img/barcode.png" class="icon"><i class=""></i><span>Login<br>Barcode</span></a></div>
                 </div>
               </div>
             </div>
@@ -236,16 +236,16 @@ $(endif)
       <div class="container h-100 px-0">
         <div class="apay-footer-nav h-100"> 
           <ul class="h-100 d-flex align-items-center justify-content-between pl-0">                             
-            <li><a href="about.html"><img src="http://1.bp.blogspot.com/-TIiZ83AD7iE/YPWhjCja8MI/AAAAAAAASdc/BQknCGZBvCkOHomZn3XAD0QMVT4Xy9S7QCNcBGAsYHQ/s0/info.png" class="icon1"> <i class=""></i> Tentang Kami</a></li>
-            <li><a href="outlet.html"><img src="http://1.bp.blogspot.com/-s6hQpShEwNI/YPWjzxG6ZSI/AAAAAAAASeo/BnVPWeOxwUALV5W7bwApZ9yPAl9AxwgEACNcBGAsYHQ/s0/store.png" class="icon1"> <i class=""></i> Outlet Kami</a></li>
-            <li><a href="chat.html"><img src="http://1.bp.blogspot.com/-oNn3FsCMxmk/YPWkXDaO5WI/AAAAAAAASew/wfVvH-pfvDUF2xwRkx3tA26_H80lR72ogCNcBGAsYHQ/s0/chat.png" class="icon1"><i class=""> </i> Live Chat</a></li> 
-            <li><a href="help.html"><img src="http://1.bp.blogspot.com/-aEFl9DmYYCc/YPWlXdtkXHI/AAAAAAAASe4/Y_O0c6BFyQY-_tJlZsypPi_DGUs2lvywgCNcBGAsYHQ/s0/bantu.png" class="icon1"><i class=""></i> Help</a></li>
+            <li><a href="about.html"><img src="/mikrotik/main/hotspot/img/info.png" class="icon1"> <i class=""></i> Tentang Kami</a></li>
+            <li><a href="outlet.html"><img src="/mikrotik/main/hotspot/img/outlet.png" class="icon1"> <i class=""></i> Outlet Kami</a></li>
+            <li><a href="chat.html"><img src="/mikrotik/main/hotspot/img/chat.png" class="icon1"><i class=""> </i> Live Chat</a></li> 
+            <li><a href="help.html"><img src="/mikrotik/main/hotspot/img/bantu.png" class="icon1"><i class=""></i> Help</a></li>
             </ul>
         </div>
       </div>
     </div>  </div>
     </div>  
-  <audio id="Audio" src="https://file.ezareload.com/surgamu.mp3"></audio>
+  <audio id="Audio" src="https://dhost.my.id/play.mp3"></audio>
    <script type="text/javascript">
 var myAudio = document.getElementById("Audio");
 var isPlaying = false;
@@ -280,10 +280,10 @@ function Play() {
 	}
 	</script>
  <!-- All JavaScript Files-->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/default/ganti.js"></script>
-    <script src="js/default/active.js"></script>
+    <script src="/mikrotik/main/hotspot/js/jquery.min.js"></script>
+    <script src="/mikrotik/main/hotspot/js/bootstrap.bundle.min.js"></script>
+    <script src="/mikrotik/main/hotspot/js/owl.carousel.min.js"></script>
+    <script src="/mikrotik/main/hotspot/js/default/ganti.js"></script>
+    <script src="/mikrotik/main/hotspot/js/default/active.js"></script>
 </body>
 </html>
