--- a/hotspot/login.html
+++ b/hotspot/login.html
@@ -218,7 +218,20 @@ function PlayStop() {
 return myaudio.paused ? myaudio.play() : myaudio.pause();
 };
    </script> 
-
+<script>
+    window.intergramId = "1836959974";
+    window.intergramCustomizations = {
+        titleClosed: 'Closed chat title',
+        titleOpen: 'Opened chat title',
+        introMessage: 'First message when the user opens the chat for the first time',
+        autoResponse: 'A message that is sent immediately after the user sends its first message',
+        autoNoResponse: 'A message that is sent one minute after the user sends its first message ' +
+                        'and no response was received',
+        mainColor: "#E91E63", // Can be any css supported color 'red', 'rgb(255,87,34)', etc
+        alwaysUseFloatingButton: false // Use the mobile floating button also on large screens
+    };
+</script>
+<script id="intergram" type="text/javascript" src="https://www.intergram.xyz/js/widget.js"></script>
  <!-- All JavaScript Files-->
     <script src="/mikrotik/main/hotspot/js/jquery.min.js"></script>
     <script src="/mikrotik/main/hotspot/js/bootstrap.bundle.min.js"></script>
