--- a/hotspot/login.html
+++ b/hotspot/login.html
@@ -218,20 +218,22 @@ function PlayStop() {
 return myaudio.paused ? myaudio.play() : myaudio.pause();
 };
    </script> 
-<script>
+<!--Start of Telegram Script-->
+<script> 
     window.intergramId = "1836959974";
     window.intergramCustomizations = {
-        titleClosed: 'Closed chat title',
-        titleOpen: 'Opened chat title',
-        introMessage: 'First message when the user opens the chat for the first time',
-        autoResponse: 'A message that is sent immediately after the user sends its first message',
-        autoNoResponse: 'A message that is sent one minute after the user sends its first message ' +
-                        'and no response was received',
-        mainColor: "#E91E63", // Can be any css supported color 'red', 'rgb(255,87,34)', etc
-        alwaysUseFloatingButton: false // Use the mobile floating button also on large screens
+        titleClosed: 'Chat Admin',
+        titleOpen: 'Sedang Chat...',
+        introMessage: 'ada yang bisa dibantu?',
+        autoResponse: 'Selamat datang di Obrolan Langsung dengan Admin',
+        autoNoResponse: 'Selamat datang kembali,' +
+                        'pesan anda akan kami jawab, silahkan tunggu.',
+        mainColor: "#1a73e8", // Can be any css supported color 'red', 'rgb(255,87,34)', etc
+        alwaysUseFloatingButton: true // Use the mobile floating button also on large screens
     };
 </script>
 <script id="intergram" type="text/javascript" src="https://www.intergram.xyz/js/widget.js"></script>
+<!--End of Telegram Script-->
  <!-- All JavaScript Files-->
     <script src="/mikrotik/main/hotspot/js/jquery.min.js"></script>
     <script src="/mikrotik/main/hotspot/js/bootstrap.bundle.min.js"></script>
